Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-14369

[C++][Python] Failed to build with g++ 4.8.5

    XMLWordPrintableJSON

Details

    Description

      Caused by ARROW-14217.

      https://github.com/ursacomputing/crossbow/runs/3928114316?check_suite_focus=true#step:8:913

      FAILED: src/arrow/python/CMakeFiles/arrow_python_objlib.dir/helpers.cc.o 
      /usr/lib64/ccache/c++  -DARROW_HAVE_RUNTIME_SSE4_2 -DARROW_HAVE_SSE4_2 -DARROW_HDFS -DARROW_JEMALLOC -DARROW_JEMALLOC_INCLUDE_DIR="" -DARROW_PYTHON_EXPORTING -DARROW_WITH_BROTLI -DARROW_WITH_BZ2 -DARROW_WITH_LZ4 -DARROW_WITH_RE2 -DARROW_WITH_SNAPPY -DARROW_WITH_TIMING_TESTS -DARROW_WITH_UTF8PROC -DARROW_WITH_ZLIB -DARROW_WITH_ZSTD -DURI_STATIC_BUILD -DUTF8PROC_STATIC -Isrc -I../src -I../src/generated -isystem ../thirdparty/flatbuffers/include -isystem /usr/include/boost169 -isystem thrift_ep-install/include -isystem protobuf_ep-install/include -isystem jemalloc_ep-prefix/src -isystem xsimd_ep/src/xsimd_ep-install/include -isystem re2_ep-install/include -isystem utf8proc_ep-install/include -isystem ../thirdparty/hadoop/include -isystem orc_ep-install/include -isystem /usr/lib64/python3.6/site-packages/numpy/core/include -isystem /usr/include/python3.6m -O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector-strong --param=ssp-buffer-size=4 -grecord-gcc-switches   -m64 -mtune=generic -O3 -DNDEBUG  -Wall -Wno-attributes -msse4.2  -DNDEBUG -fPIC   -std=c++11 -MD -MT src/arrow/python/CMakeFiles/arrow_python_objlib.dir/helpers.cc.o -MF src/arrow/python/CMakeFiles/arrow_python_objlib.dir/helpers.cc.o.d -o src/arrow/python/CMakeFiles/arrow_python_objlib.dir/helpers.cc.o -c ../src/arrow/python/helpers.cc
      ../src/arrow/python/helpers.cc: In function 'arrow::Result<arrow::py::OwnedRef> arrow::py::internal::{anonymous}::PyObjectToPyInt(PyObject*)':
      ../src/arrow/python/helpers.cc:170:12: error: cannot bind 'arrow::py::OwnedRef' lvalue to 'arrow::py::OwnedRef&&'
           return ref;
                  ^
      In file included from ../src/arrow/type.h:30:0,
                       from ../src/arrow/python/helpers.h:32,
                       from ../src/arrow/python/helpers.cc:21:
      ../src/arrow/result.h:177:3: error:   initializing argument 1 of 'arrow::Result<T>::Result(T&&) [with T = arrow::py::OwnedRef]'
         Result(T&& value) noexcept {  // NOLINT(runtime/explicit)
         ^
      ../src/arrow/python/helpers.cc:180:12: error: cannot bind 'arrow::py::OwnedRef' lvalue to 'arrow::py::OwnedRef&&'
           return ref;
                  ^
      In file included from ../src/arrow/type.h:30:0,
                       from ../src/arrow/python/helpers.h:32,
                       from ../src/arrow/python/helpers.cc:21:
      ../src/arrow/result.h:177:3: error:   initializing argument 1 of 'arrow::Result<T>::Result(T&&) [with T = arrow::py::OwnedRef]'
         Result(T&& value) noexcept {  // NOLINT(runtime/explicit)
         ^
      

      Attachments

        Issue Links

          Activity

            People

              kou Kouhei Sutou
              kou Kouhei Sutou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1.5h
                  1.5h